--- a/front/pages/gm/cdk.html
+++ b/front/pages/gm/cdk.html
@@ -65,7 +65,13 @@
           },
           { field: "sCustomLimit", title: "自定义限制", width: 120 },
           { field: "sZoneLimit", title: "分区限制", align: "center", width: 90 },
-          { field: "iExchangeLimit", title: "每账号限制", align: "center", width: 120 },
+          { field: "iExchangeLimit", title: "每账号限制", align: "center", width: 120, templet: function (d) {
+            if (d.iExchangeLimit == 0) {
+              return '无';
+            } else {
+              return d.iExchangeLimit + '次';
+            }
+          }},
           { field: "sRewardInfo", title: "自定义奖励", align: "center", fixed: 'right' },
           { field: "iGeneratedNum", title: "已生成", align: "center", width: 90, fixed: 'right' },
           { field: "iExchangedNum", title: "已兑换", align: "center", width: 90, fixed: 'right' },
