--- a/front/pages/gm/cdk-add.html
+++ b/front/pages/gm/cdk-add.html
@@ -58,12 +58,12 @@
         </div>
       </div>
 
-      <div class="layui-form-item" id="customlimit">
+      <!--<div class="layui-form-item" id="customlimit">
         <label class="layui-form-label">自定义限制</label>
         <div class="layui-input-block">
           <textarea name="sCustomLimit" class="layui-textarea"></textarea>
         </div>
-      </div>
+      </div>-->
 
       <div class="layui-form-item" id="zonelimit">
         <label class="layui-form-label">分区限制</label>
@@ -82,7 +82,7 @@
       <div class="layui-form-item" id="rewardinfo">
         <label class="layui-form-label">自定义奖励</label>
         <div class="layui-input-block">
-          <textarea name="sRewardInfo" class="layui-textarea" lay-verify="required" lay-verType="tips"></textarea>
+          <textarea name="sRewardInfo" class="layui-textarea" placeholder="1:邮件id:道具id*数量,道具id*数量" lay-verify="required" lay-verType="tips"></textarea>
         </div>
       </div>
 
