--- a/front/pages/gm/cdk-add.html
+++ b/front/pages/gm/cdk-add.html
@@ -66,14 +66,14 @@
       </div>-->
 
       <div class="layui-form-item" id="zonelimit">
-        <label class="layui-form-label">分区限制</label>
+        <label class="layui-form-label">可用分区</label>
         <div class="layui-input-block">
           <input type="text" name="sZoneLimit" class="layui-input">
         </div>
       </div>
 
       <div class="layui-form-item" id="exchangelimit">
-        <label class="layui-form-label">每账号限制</label>
+        <label class="layui-form-label">账号使用次数</label>
         <div class="layui-input-block">
           <input type="text" name="iExchangeLimit" class="layui-input">
         </div>
