--- a/front/pages/gm/cdk-edit.html
+++ b/front/pages/gm/cdk-edit.html
@@ -47,14 +47,14 @@
       </div>-->
 
       <div class="layui-form-item">
-        <label class="layui-form-label">分区限制</label>
+        <label class="layui-form-label">可用分区</label>
         <div class="layui-input-block">
           <input type="text" name="sZoneLimit" class="layui-input">
         </div>
       </div>
 
       <div class="layui-form-item">
-        <label class="layui-form-label">每账号限制</label>
+        <label class="layui-form-label">账号使用次数</label>
         <div class="layui-input-block">
           <input type="text" name="iExchangeLimit" class="layui-input">
         </div>
