--- a/front/pages/gm/cdk.html
+++ b/front/pages/gm/cdk.html
@@ -63,9 +63,9 @@
               return okUtils.dateFormat(new Date(d.iEndTime * 1000), 'yyyy-MM-dd hh:mm:ss');
             }
           },
-          { field: "sCustomLimit", title: "自定义限制", width: 120 },
-          { field: "sZoneLimit", title: "分区限制", align: "center", width: 90 },
-          { field: "iExchangeLimit", title: "每账号限制", align: "center", width: 120, templet: function (d) {
+          //{ field: "sCustomLimit", title: "自定义限制", width: 120 },
+          { field: "sZoneLimit", title: "可用分区", align: "center", width: 90 },
+          { field: "iExchangeLimit", title: "账号使用次数", align: "center", width: 120, templet: function (d) {
             if (d.iExchangeLimit == 0) {
               return '无';
             } else {
