--- a/front/pages/gm/cdk-edit.html
+++ b/front/pages/gm/cdk-edit.html
@@ -49,7 +49,7 @@
       <div class="layui-form-item">
         <label class="layui-form-label">可用分区</label>
         <div class="layui-input-block">
-          <input type="text" name="sZoneLimit" class="layui-input">
+          <div id="zoneSelect"></div>
         </div>
       </div>
 
@@ -76,6 +76,7 @@
     </form>
   </div>
   <script src="/lib/layui/layui.js"></script>
+  <script type="text/javascript" src="/lib/xm-select/xm-select.js"></script>
   <script>
     layui.use(['form', 'laydate', 'okLayer', 'okUtils'], function () {
       let form = layui.form;
@@ -83,6 +84,67 @@
       let okLayer = layui.okLayer;
       let laydate = layui.laydate;
       let $ = layui.jquery;
+      let xmSelect = layui.xmSelect;
+
+      let zoneSelect = xmSelect.render({
+        el: '#zoneSelect',
+        name: 'sZoneLimit',
+        prop: {
+          value: 'iZoneId',
+          name: 'sZoneName',
+        },
+        tips: '请选择一个服务器',
+        layVerify: 'required',
+        layVerType: 'tips',
+        autoRow: true,
+        model: {
+          label: {
+            type: 'block',
+            block: {
+              //是否显示删除图标
+              showIcon: false,
+            }
+          }
+        },
+        toolbar: {
+          show: true,
+        },
+        on: function(data){
+          //arr:  当前多选已选中的数据
+          let arr = data.arr;
+          //change, 此次选择变化的数据,数组
+          let change = data.change;
+          //isAdd, 此次操作是新增还是删除
+          let isAdd = data.isAdd;
+          if(isAdd){
+            var allItem = change.find(function(item){
+              return item.iZoneId === 99999;
+            })
+            if(allItem){
+              return [allItem];
+            }
+            allItem = arr.find(function(item){
+              return item.iZoneId === 99999;
+            })
+            if(allItem){
+              return change;
+            }
+          }
+        },
+      });
+
+      okUtils.ajax("/api/gm/zone/simplelist", "get", null, false).done(function (response) {
+        let ids = [99999];
+        if (parent.editCDK.sZoneLimit != '') {
+          ids = parent.editCDK.sZoneLimit.split(',');
+        }
+        zoneSelect.update({
+          data: response.data,
+          initValue: ids,
+        });
+      }).fail(function (error) {
+        console.log(error);
+      });
 
       laydate.render({ elem: "#iBeginTime", type: "datetime", value: new Date(parent.editCDK.iBeginTime * 1000) });
       laydate.render({ elem: "#iEndTime", type: "datetime", value: new Date(parent.editCDK.iEndTime * 1000) });
@@ -99,6 +161,9 @@
         data.field.iBeginTime = Date.parse(data.field.iBeginTime) / 1000;
         data.field.iEndTime = Date.parse(data.field.iEndTime) / 1000;
         data.field.ICDKeyId = parent.editCDK.id;
+        if (data.field.sZoneLimit == '99999') {
+          data.field.sZoneLimit = '';
+        }
         okUtils.ajax("/api/gm/cdk/update", "post", data.field, true).done(function (response) {
           okLayer.greenTickMsg(response.data, function () {
             parent.layer.close(parent.layer.getFrameIndex(window.name));
