--- a/front/pages/gm/notice-edit.html
+++ b/front/pages/gm/notice-edit.html
@@ -15,16 +15,15 @@
         <label class="layui-form-label">状态</label>
         <div class="layui-input-block">
           <select name="iPause">
-            <option value="0">暂停</option>
-            <option value="1" selected>正常</option>
+            <option value="0">正常</option>
+            <option value="1" selected>暂停</option>
           </select>
         </div>
       </div>
 
       <div class="layui-form-item">
         <div class="layui-input-block">
-          <button class="layui-btn" lay-submit lay-filter="add">添加</button>
-          <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+          <button class="layui-btn" lay-submit lay-filter="add">更新</button>
         </div>
       </div>
 
