--- a/front/pages/gm/notice.html
+++ b/front/pages/gm/notice.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <title>跑马灯</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" href="../../css/oksub.css">
-  <script type="text/javascript" src="../../lib/loading/okLoading.js"></script>
+  <link rel="stylesheet" href="/css/oksub.css">
+  <script type="text/javascript" src="/lib/loading/okLoading.js"></script>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
     <table id="tableId" lay-filter="tableFilter"></table>
   </div>
   <!--js逻辑-->
-  <script src="../../lib/layui/layui.js"></script>
+  <script src="/lib/layui/layui.js"></script>
   <script>
     var editNotice;
     layui.use(["element", "table", "okLayer", "okUtils"], function () {
@@ -35,7 +35,7 @@
         toolbar: "#toolbarTpl",
         cols: [[
           { type: "checkbox", title: "序号", fixed: 'left' },
-          { field: "id", title: "ID", width: 90, fixed: 'left' },
+          { field: "id", title: "ID", width: 50, fixed: 'left' },
           {
             field: "iType", title: "公告类型", width: 90, align: "center",
             templet: function (d) {
@@ -51,8 +51,8 @@
             }
           },
           { field: "sContent", title: "内容" },
-          { field: "sBeginTime", title: "开始时间", align: "center" },
-          { field: "sEndTime", title: "结束时间", align: "center" },
+          { field: "sBeginTime", title: "开始时间", align: "center", width: 180 },
+          { field: "sEndTime", title: "结束时间", align: "center", width: 180 },
           {
             field: "iDisplayType", title: "显示位置", width: 90, align: "center", templet: function (d) {
               var ret = '';
@@ -65,28 +65,47 @@
               return ret;
             }
           },
-          { field: "iDisplayInterval", title: "显示间隔（秒）", width: 90, align: "center" },
-          { field: "iDisplayNum", title: "显示次数", width: 90, align: "center" },
+          { field: "iDisplayInterval", title: "显示间隔(秒)", width: 120, align: "center", templet: function(d) {
+            if (d.iType != 1) {
+              return '-';
+            }
+            return d.iDisplayInterval;
+          }},
+          { field: "iDisplayNum", title: "显示次数", width: 90, align: "center", templet: function(d) {
+            if (d.iType != 1) {
+              return '-';
+            }
+            return d.iDisplayNum;
+          }},
           {
             field: "iPause", title: "状态", width: 90, align: "center", templet: function (d) {
               var ret = '';
               switch (d.iPause) {
-                case 0: ret = '暂停'; break;
-                case 1: ret = '正常'; break;
+                case 0: ret = '正常'; break;
+                case 1: ret = '暂停'; break;
                 default:
                   ret = '未知状态';
               }
               return ret;
             }
           },
-          { field: "sZone", title: "分区", align: "center" },
-          { field: "iMaintenanceTime", title: "维护时间（分钟）", width: 90, align: "justify" },
+          { field: "vZoneId", title: "分区", align: "center", width: 90, templet: function(d) {
+            if (!d.vZoneId) {
+              return '全服';
+            }
+            return d.vZoneId;
+          }},
+          { field: "iMaintenanceTime", title: "维护时间(分钟)", width: 135, align: "justify", templet: function (d) {
+            if (d.iType != 2) {
+              return '-';
+            }
+            return d.iMaintenanceTime;
+          }},
           { title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right' }
         ]],
         parseData: function (res) {
           for (i = 0; i < res.data.length; ++i) {
             res.data[i].id = res.data[i].iNoticeId;
-            res.data[i].sZone = res.data[i].vZoneId;
           }
         }
       });
@@ -136,6 +155,10 @@
       }
 
       function edit(id) {
+        if (editNotice.iPause == 1) {
+          okLayer.redCrossMsg('已暂停的公告不能编辑', function() {});
+          return;
+        }
         okLayer.open("编辑跑马灯", "/gm/notice-edit.html", "90%", "90%", null, function () {
           noticeTable.reload();
         })
