--- a/front/pages/game/role.html
+++ b/front/pages/game/role.html
@@ -131,17 +131,17 @@
     }
 
     function ban_speak() {
-      okLayer.open("禁言", "ban_speak.html", "40%", "50%", null, function () {
+      okLayer.open("禁言", "ban-speak.html", "40%", "50%", null, function () {
       })
     }
 
     function ban_login() {
-      okLayer.open("封号", "ban_login.html", "40%", "210px", null, function () {
+      okLayer.open("封号", "ban-login.html", "40%", "210px", null, function () {
       })
     }
 
     function detail(id) {
-      okLayer.open("详情","role_detail.html", "100%", "100%", null, function () {
+      okLayer.open("详情","role-detail.html", "90%", "90%", null, function () {
       })
     }
 
