--- a/front/pages/system/log.html
+++ b/front/pages/system/log.html
@@ -52,7 +52,7 @@
 
     let logTable = table.render({
       elem: "#tableId",
-      url: "/api/sys/log/list",
+      url: "/api/log/list",
       text: {
         none: '暂无相关数据',
       },
